# strix

./: README.md  pyproject.toml
containers/: Dockerfile
docs/advanced/: configuration.mdx
docs/integrations/: github-actions.mdx
docs/plans/: 2026-03-08-mcp-ux-design.md  2026-03-08-mcp-ux-plan.md  2026-03-08-phase2-chaining-design.md  2026-03-08-phase2-chaining.md  2026-03-09-mcp-phase3-design.md  2026-03-09-mcp-phase3-plan.md
docs/superpowers/plans/: 2026-03-17-recon-phase.md
docs/superpowers/specs/: 2026-03-17-recon-phase-design.md
strix-mcp/: .gitignore  .mcp.json  E2E_CHECKLIST.md  README.md  pyproject.toml
strix-mcp/docs/: upstream-integration-opportunities.md
strix-mcp/docs/plans/: 2026-03-08-mcp-enhancements.md  2026-03-14-telemetry-integration-design.md  2026-03-14-telemetry-integration-plan.md
strix-mcp/src/strix_mcp/: __init__.py  chaining.py  methodology.md  resources.py  sandbox.py  server.py  stack_detector.py  tools.py  tools_analysis.py  tools_helpers.py  tools_notes.py  tools_proxy.py  tools_recon.py
strix-mcp/tests/: docker-compose.test.yml  test_chaining.py  test_integration.py  test_resources.py  test_stack_detector.py  test_tools.py  test_tools_analysis.py  test_tools_helpers.py  test_tools_notes.py
strix-mcp/tests/vulnerable_app/: app.py
strix/agents/StrixAgent/: strix_agent.py  system_prompt.jinja
strix/config/: config.py
strix/interface/: cli.py  main.py  tui.py
strix/llm/: config.py  llm.py
strix/skills/: README.md
strix/telemetry/: tracer.py  utils.py
strix/tools/: __init__.py
tests/llm/: test_llm_otel.py
(+23 files in other folders)
