[project]
name = "strix-mcp"
version = "0.1.0"
description = "MCP server exposing Strix security sandbox tools to AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "strix-agent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
strix-mcp = "strix_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strix_mcp"]
